--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,14 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   background: #b1122a;
 }
 
@@ -76,7 +78,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #7a1e2f;
 }
 button:focus,
 button:focus-visible {
